infra/gitops/apps/hello/hello-ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: hyper-swarm
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: vpm-mini
    app.kubernetes.io/component: application
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "0"
        autoscaling.knative.dev/maxScale: "50"
        autoscaling.knative.dev/target: "100"
      labels:
        app.kubernetes.io/name: hello
        app.kubernetes.io/part-of: vpm-mini
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          env:
            - name: TARGET
              value: "vpm-mini"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
